@@ -9,6 +9,8 @@ This software is a copyrighted work licensed under the terms of the
 Cygwin license.  Please consult the file "CYGWIN_LICENSE" for
 details. */
 
+#pragma once
+
 /* Initial and increment values for cygwin's fd table */
 #define NOFILE_INCR    32
 /* Maximum size we allow expanding to.  */
@@ -54,6 +56,8 @@ public:
   fhandler_base *dup_worker (fhandler_base *oldfh, int flags);
   int extend (int howmuch);
   void fixup_after_fork (HANDLE);
+  void fixup_close (size_t, fhandler_base *);
+
   inline int not_open (int fd)
   {
     lock ();
